syntax="proto3";

package orders;

option go_package="orders/orderspb";

message OrdersCountRequest {}

message OrdersCountResponse {
    string count=1;
}

message PopularDish{
   string DishName=1;
}
message City{
  string CityName=1;
}

service OrdersService {
    rpc GetOrdersCount(OrdersCountRequest) returns (OrdersCountResponse) {}
    rpc GetPopularDish(City) returns (PopularDish){}
}